--- a/Notes/01.Intro.md
+++ b/Notes/01.Intro.md
@@ -11,7 +11,7 @@
 
 * An operating system does this is by employing a technique known as *virtualization*.
     * Virtualization is taking a physical resource and abstracting away the implementation details to its most fundamental form.
-    * As a result, operating systems are sometimes called *virtual machines* (as opposed to something like VirtalBox, which is technically a *virtual machine monitor*, or *hypervisor*).
+    * As a result, operating systems are sometimes called *virtual machines* (as opposed to something like VirtualBox, which is technically a *virtual machine monitor*, or *hypervisor*).
     * Figuring out how an operating system might do this is one of the main goals of this course.
 
 * In order for users to make use of the OS, *interfaces* (aka *APIs*) are provided in the form of a *system call* (*syscall*).
