--- a/Notes/01.Intro.md
+++ b/Notes/01.Intro.md
@@ -124,7 +124,7 @@ void Spin(int howlong) {
     * Operating systems specify a simplistic model for *physical memory*:
         * Memory is an array of bytes.
         * To *read* from memory, one must specify an *address*.
-        * To *write* (or *update*) memory, one must specify by an address and the data to be written.
+        * To *write* (or *update*) memory, one must specify both an address and the data to be written.
 
 * Recall that, in the von Neumann model, both the data we're operating on **and** the instructions of our program are in memory.
 
