Chapter 2 Notes Continued - Concurrency

--- a/Notes/01.Intro.md
+++ b/Notes/01.Intro.md
@@ -208,4 +208,119 @@ int main(int argc, char *argv[]) {
 
 ## Concurrency
 
+* *Concurrency* is the ability of programs to execute instructions in segments where we may interrupt one segment to allow for the execution of a different segment.
+    * For example, we may have two tasks that might have some level of inter-dependence, but can be executed in such a way that, when one task has to wait (such as for some I/O operation), the other task can start from where it previously stopped.
+    * This allows for less time spent with the CPU doing nothing -- or worse, spending cycles, and the accompanying electricity, just to wait.
+
+* The first examples of concurrency come from operating systems, themselves.
+    * Recall that we've been running multiple versions of the example code above where the execution seemingly overlapped.
+    * This is a result of the operating system using concurrency to make efficient use of the CPU to stop working on one program when it runs into the `Spin()` function to work on the next.
+
+* The problems that come with concurrency can be quite difficult to wrap one's head around and, nowadays, are involved in more than just the operating system.
+    * Many programs are now *multi-threaded*.
+    * We see an example of a multi-threaded program below, along with a problem that arises due to a bug that might not be obvious on first inspection, especially when first seeing threads.
+
+File: `threads.c`
+```c
+#include <stdio.h>
+#include <stdlib.h>
+#include "common.h"
+#include "common_threads.h"
+
+volatile int counter = 0; 
+int loops;
+
+void *worker(void *arg) {
+    int i;
+    for (i = 0; i < loops; i++) {
+	counter++;
+    }
+    return NULL;
+}
+
+int main(int argc, char *argv[]) {
+    if (argc != 2) { 
+	fprintf(stderr, "usage: threads <loops>\n"); 
+	exit(1); 
+    } 
+    loops = atoi(argv[1]);
+    pthread_t p1, p2;
+    printf("Initial value : %d\n", counter);
+    Pthread_create(&p1, NULL, worker, NULL); 
+    Pthread_create(&p2, NULL, worker, NULL);
+    Pthread_join(p1, NULL);
+    Pthread_join(p2, NULL);
+    printf("Final value   : %d\n", counter);
+    return 0;
+}
+```
+
+* Note that there's an included `common_threads.h` header, but this just defines some wrapper macros for some of the functions being used.
+    * In particular, `Pthread_create()` and `Pthread_join()` are wrappers for the functions `pthread_create()` and `pthread_join()`, where the "p" is lowercase.
+    * The details aren't very important for this example.
+
+* This program creates two *threads*.
+    * A thread can be thought of as a separate, but parallel, line of execution.
+        * Parallel, here, should not be mistaken for *parallelism*.
+            * Think of concurrency as a list of tasks that can be worked on where we can switch our attention between them as necessary.
+            * Think of parallelism as having multiple workers doing these tasks simultaneously.
+    * Multiple threads, then, allow for multiple lines of execution which may or may not converge at some point.
+
+* These two threads work to add one to a counter some number of times, as specified by the arguments we pass to the program.
+    * Two threads are adding 1 to a counter that starts at 0 a total of $N$ times each, where $N$ is the number we pass, and so we expect the output to be $2N$.
+
+* It may not seem obvious at this point, but there is a bug in this program.
+    * Let's look at a few executions.
+
+```
+shell> ./threads 100
+Initial value : 0
+Final value   : 200
+shell> ./threads 1000
+Initial value : 0
+Final value   : 2000
+shell> ./threads 10000
+Initial value : 0
+Final value   : 20000
+```
+
+* So far, so good, but what happens if we add one more 0 to the end?
+
+```
+shell> ./threads 100000
+Initial value : 0
+Final value   : 163963
+```
+
+* What happened here!?
+    * Maybe it was a fluke?
+    * Let's run a couple more times.
+
+```
+shell> ./threads 100000
+Initial value : 0
+Final value   : 198655
+shell> ./threads 100000
+Initial value : 0
+Final value   : 200000
+shell> ./threads 100000
+Initial value : 0
+Final value   : 188275
+```
+
+* Each time gives a different answer, and we even got lucky and saw the correct answer once.
+
+* What's happening is that we're sharing a counter between the two threads.
+    * The first few numbers we passed to the program were small enough for one thread to finish executing before the next started.
+    * The last number, however, was large enough that there were context switches between the two threads mid-execution.
+    * As a result, the two threads would end up seeing different values in the counter.
+        * Suppose thread 1 saw a value of `12345` and the context switched to thread 2.
+        * Thread 2 now sees `12345` in the counter and increments from there for awhile, and then we return to thread 1.
+        * Thread 1 starts incrementing from `12345`, since that's the value it saw last, losing all of the progress that thread 2 had made.
+
+* This is known as a *race condition* (or *race hazard*), specifically a *data race*, and is the result of our code not executing *atomically*.
+    * This will be studied more in-depth when we get to the piece about concurrency.
+
+## Persistence
+
 * 
