Continuing Chapter 2 Notes - Persistence

--- a/Notes/01.Intro.md
+++ b/Notes/01.Intro.md
@@ -323,4 +323,55 @@ Final value   : 188275
 
 ## Persistence
 
+* The third easy piece is *persistence*.
+    * RAM is *volatile*, meaning a loss in power leads to a loss of any data stored in it.
+    * *Persistent storage*, like hard drives or SSDs, don't lose the data stored with a loss in power.
+
+* An operating system typically manages persistent storage using a *file system*.
+
+* Unlike the CPU and memory, the abstraction provided by the OS for persistent storage doesn't create separate virtual disks for each program.
+    * It is assumed that programs will want to share the data that gets stored in a file system.
+    * In fact, the process of writing, compiling, and running a program requires that the data in the file system is shared between the editor, the compiler, the program, and the shell used to run all of the above.
+
+File: `io.c`
+```c
+#include <stdio.h>
+#include <unistd.h>
+#include <assert.h>
+#include <fcntl.h>
+#include <sys/stat.h>
+#include <sys/types.h>
+#include <string.h>
+
+int main(int argc, char *argv[]) {
+    int fd = open("/tmp/file", O_WRONLY | O_CREAT | O_TRUNC, S_IRUSR | S_IWUSR);
+    assert(fd >= 0);
+    char buffer[20];
+    sprintf(buffer, "hello world\n");
+    int rc = write(fd, buffer, strlen(buffer));
+    assert(rc == (strlen(buffer)));
+    fsync(fd);
+    close(fd);
+    return 0;
+}
+```
+
+* This program uses some interfaces provided by the OS to access and edit files without worrying about what the exact file system is.
+
+* This program creates a file `/tmp/file` and writes "hello world" and a newline to it.
+
+* This abstraction hides the nasty details that the operating system has to implement to make it work.
+    * Depending on the storage medium, writing some bits isn't as easy as *just* writing the bits.
+    * Finding the location where to read and/or write can be tough.
+    * Even after finding the location, the OS still has to worry about maintaining the data structures used by the file system to keep track of everything and retain coherence between the logical files and the physical media that they're stored on.
+    * And all of this is done behind the scenes while the user only has to see a few system calls.
+
+* Beyond all of that, because writing to persistent storage is often orders of magnitude slower than to system memory, the OS often *batches* writes when possible.
+    * As a result, techniques for keeping the internal state of the file system in working order after a crash are necessary.
+        * A couple of these techniques are *journaling* and *copy-on-write*.
+
+* When we reach the piece on persistence, we will see how these work in much more detail.
+
+## OS Design Goals
+
 * 
