Finished Intro to Operating Systems note

--- a/Notes/01.Intro.md
+++ b/Notes/01.Intro.md
@@ -374,4 +374,77 @@ int main(int argc, char *argv[]) {
 
 ## OS Design Goals
 
-* 
+* Now we know what an OS does:
+    * It virtualizes physical resources, like the CPU, memory, and disks.
+    * It handles a smooth, multi-application experience via concurrency.
+    * It stores files persistently, making the information accessible over the long term.
+
+* One tool that is used everywhere in computer science, and, of course, shows up here, is *abstraction*.
+    * We use abstraction to turn large, specific problems into many smaller, and potentially more generic, problems.
+    * Abstraction allows for a more modular design, where we can interchange parts depending on our needs and the evolution of technology.
+    * This is because abstraction allows for interfaces between software and hardware that users don't have to worry about.
+
+* Along with building the appropriate abstractions, we also have some other design goals that we can make progress towards to varying degrees:
+    * Performance
+    * Protection
+    * Reliability
+    * Energy-efficiency
+
+* These design goals are all inter-related while also sometimes being incompatible to certain degrees.
+    * For instance, an insecure system can't be said to be reliable or even performant when it's compromised.
+    * Similarly, an unreliable system can't perform, and a system without any performance is quite unreliable.
+    * On the other hand, many security features do introduce some performance overhead, as do many reliability features.
+    * Energy-efficiency also shows up, as "too much" performance might eat into the energy budget.
+
+* The first goal, performance, can be characterized mainly as minimizing the overhead of the OS.
+    * Virtualization, while making it easier to work with the physical resources of the system, do add the overhead of calculating and of the necessary logic to make that virtualization work behind-the-scenes.
+    * This means that we have some overhead in terms of instructions to compute address offsets, extra space usage due to file structures of the file system, extra memory usage from how memory is allocated, etc., and we want to do things in such a way that we can maintain other design goals without sacrificing too much performance.
+
+* Protection, and to a further extent, *security*, is another important goal to strive for in developing an OS.
+    * We want protection between applications so that they're not getting in each other's way; we do this by implementing some form of *isolation* between applications.
+    * We want protection from external forces, such as malicious code that undermines the intended and/or desired use of a system by a user.
+
+* The third design goal listed above, reliability, refers to a system's ability to avoid and correct, or otherwise gracefully handle, errors when running.
+    * As systems grow more complex, so too does maintaining uptime.
+    * Less uptime means less computing means less stuff getting done.
+
+* Energy-efficiency is becoming much more relevant.
+    * Probably the most dire existential crisis for humanity and other organisms on our planet is human-made (and exasperated) climate change due to the energy sources we use.
+        * Minimizing energy usage of devices, hopefully without sacrificing performance, can help minimize the effects of climate change while energy generation moves to more clean and renewable sources (assuming we actually do it in time).
+    * Beyond that, we also have mobile devices which are only convenient because they can run without being tied down to a single place all of the time.
+
+## Some Historical Notes
+
+* Operating Systems as we know them today are the result of many decades of work.
+
+* The first "operating systems" were simple libraries and interfaces for abstracting away low-level operations so that programmers wouldn't have to reinvent the wheel every time they needed to compute something.
+
+* As time went on, it became clear that some operations, such as file handling, should have some limits placed and be maintained by the operating system rather than giving the programmer unrestricted access to everything at all times.
+    * These operations are implemented via system calls through special hardware instructions and states.
+    * System calls transfers control to the OS, which has an elevated *hardware privilege level* that allows for looking at and changing sensitive data.
+        * Internally, a program runs in what's called *user mode*, which restricts the sorts of operations it has access to.
+        * A system call is used to elevate to *kernel mode*, which is initiated through something known as a *trap* or *interrupt* which gets transferred to a *trap handler*.
+        * In kernel mode, the OS is able to access hardware more fully in ways that might be dangerous to allow a programmer to.
+        * When the OS is done, it relinquishes control back to the user, while simultaneously de-escalating the privilege level, through a *return-from-trap* instruction.
+
+* Eventually, computers would need to run more than one program at a time to best use all of their hardware, which became known as *multiprogramming*.
+    * Because some programs would need to wait for system resources to respond with data from something like main memory or even a hard drive, other programs which were waiting to continue execution could start running during that time to utilize the CPU more efficiently.
+    * However, because multiple programs would be running, protections needed to be in place, such as memory protection, to prevent one program from destroying another's work.
+    * At the same time, the operating system, itself, would need to be written in a way to not run into concurrency issues, which we will see more of when we get to that piece.
+
+* Nowadays, multiprogramming is essential, because we expect or computers to be multimedia devices that also do work for us.
+    * In the early days of personal computers, a lot of historical lessons needed to be relearned.
+        * Some early systems didn't seem to be designed in a way to provide inter-application protections or would lock up due to poorly implemented concurrency.
+    * Since relearning lessons that were already history is much like reinventing the wheel, we should want to avoid it in production code.
+        * Relearning the lessons on one's own time can be quite enlightening, though.
+
+### Summary
+
+* In this course, most of the topics above will be expanded on and explored to a decent level of depth.
+
+* Unfortunately, topics such as networking or graphics devices *aren't* on the menu, currently.
+    * However, since I (the writer of these notes) plan on taking some courses on [computer networking](https://omscs.gatech.edu/cs-6250-computer-networks) and [GPU software/hardware](https://omscs.gatech.edu/cs-8803-o21-gpu-hardware-and-software) through Georgia Tech's [OMSCS program](https://omscs.gatech.edu/), I might be able to fill in some of these gaps later on.
+
+* As we move forward, hopefully any questions that the reader and/or I have will be answered!
+
+**Next: Processes (Coming Soon)**
